--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-.home-container-1{
+/* .home-container-1{
   display: flex;
   justify-content: space-between;
   min-height: 100vh;
@@ -49,4 +49,4 @@
       padding: 10px;
       width: 100%;
   }
-}
+} */
