--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,201 +1,119 @@
-ul{
-  list-style: none;
-}
-
-.main-nav{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
+.main-nav {
   min-height: 50px;
   width: 100%;
   margin: 0% auto;
-  background-color: #f8f9f9;
-  border-top: 3px solid #ef8236;
-  box-shadow: 0 1px 5px #00000033;
-  z-index: 5;
+  border-top: solid 3px #ef8236;
+  box-shadow: 0px 1px 5px #00000033;
+  position: fixed;
+  z-index: 15;
   top: 0%;
   left: 0%;
+  background-color: #f8f9f9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.navbar{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.navbar {
   height: 100%;
   min-width: 85%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.navbar form{
-  position: relative;
+.slide-in-icon {
+  display: none;
+  transition: 0.2s;
+  padding: 5px 6px 3px 6px;
+  border-radius: 50%;
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
+}
+
+.navbar .navbar-1 {
+  display: flex;
+  align-items: center;
   flex-grow: 1;
-  padding: 0 12px;
 }
 
-.navbar form input{
-  min-width: 90%;
-  margin: 0;
-  padding: 8px 10px 8px 32px;
-  font-size: 13px;
-  border: 1px solid #0000003e;
-  border-radius: 3px;
+.navbar .navbar-2 {
+  display: flex;
+  align-items: center;
 }
 
-.navbar form .search-icon{
-  position: absolute;
-  left: 25px;
-  top: 8px;
-}
-
-.nav-logo{
+.nav-logo {
   padding: 5px 25px;
 }
 
-.nav-logo img{
-  height: 30px;
-}
-
-.nav-item{
-  margin: 0 3px;
-  font-size: 13px;
+.nav-item {
+  margin: 0px 3px;
+  font-size: small;
   font-weight: 500;
   text-decoration: none;
   color: rgb(69, 69, 69);
   transition: 0.2s;
 }
 
-.nav-item:hover{
-  background-color: rgb(226 , 226, 226);
-}
-
-.nav-btn{
+.nav-btn {
   cursor: pointer;
   border-radius: 20px;
   padding: 10px 20px;
 }
 
-.nav-links{
-  cursor: pointer;
-  background-color: #e7f8fe;
-  padding: 7px 13px;
-  border: 1px solid #3c00ff47;
+.nav-item:hover,
+.slide-in-icon:hover {
+  background-color: rgb(226, 226, 226);
+}
+
+.navbar .navbar-1 form {
+  flex-grow: 1;
+  padding: 0px 12px;
+  position: relative;
+}
+
+.navbar .navbar-1 form input {
+  min-width: 90%;
+  margin: 0;
+  padding: 8px 10px 8px 32px;
+  font-size: 13px;
+  border: solid 1px #0000003e;
   border-radius: 3px;
 }
 
-.nav-links:hover{
-  background-color: #d3e4eb;
-}
-
-.menu{
-  display: none;
-}
-
-.menu>li {
-float: left;
-color: white;
-border-radius: 5px;
-text-align: center;
-background-color: #ef8236;
-width: 45px;
-height: 40px;
-line-height: 40px;
-cursor: pointer;
-font-size: 17px;
-}
-.sub-menu {
-transform: scale(0);
-transform-origin: top center;
-transition: all 300ms ease-in-out;
-}
-.sub-menu li {
-  font-size: 14px;
-  background-color: bisque;
-  padding: 8px 0;
-  width: 85px;
-  color: black;
-  font-weight: 500;
-  border-bottom: 1px solid rgb(255, 255, 255);
-  transform: scale(0);
-  transition: all 300ms ease-in-out;
-}
-
-.sub-menu li:last-child {
-border-bottom: 0;
-}
-.sub-menu li:hover {
-background: #f09f66;
-}
-.menu>li:hover .sub-menu li {
-transform: scale(1);
-}
-.menu>li:hover .sub-menu {
-transform: scale(0.9);
-}
-
-.nav-right {
-  display: flex;
-  align-items: center;
-  position: relative;
-  margin-left: 20px;
-}
-
-.nav-right-modelbox {
-  display: flex;
-  flex-direction: column;
-  background: #fff;
+.navbar .navbar-1 form .search-icon {
   position: absolute;
-  top: 40px;
-  width: 110px;
-  right: 0;
-  border: 1px solid #ddd;
+  left: 25px;
+  top: 8px;
 }
-.nav-right-modelbox div {
-  padding: 10px;
-  font-size: 0.9rem;
-  border-top: 1px solid #ddd;
-  transition: 0.2s all;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.nav-right-modelbox div svg {
-  font-size: 18px;
-}
-.nav-right-modelbox div:hover {
-  background: #f0f0f0;
+
+.nav-links {
+  padding: 7px 13px;
+  border: solid 1px blue;
+  border-radius: 3px;
+  background-color: #e7f8fe;
   cursor: pointer;
 }
 
-@media screen and (max-width: 500px) {
-  .menu{
-      display: block;
-      margin-right: 10px;
-  }
+.nav-links:hover {
+  background-color: #d3e4eb;
+}
 
-  .nav-btn{
-      display: none;
-  }
-
-  .main-nav{
-      justify-content: space-between;
+@media screen and (max-width: 1120px) {
+  .navbar .navbar-1 form {
+    display: none;
   }
 }
 
-@media screen and (max-width: 1000px) {
-  
-  .navbar form{
-      display: none;
+@media screen and (max-width: 760px) {
+  .slide-in-icon {
+    display: block;
   }
+}
 
-  .nav-btn{
-      padding: 5px 10px;
-  }
-
-  .nav-logo{
-      padding: 5px 10px;
-  }
-
-  .nav-logo img{
-      height: 25px;
+@media screen and (max-width: 620px) {
+  .navbar .navbar-1 .res-nav {
+    display: none;
   }
 }
