--- a/client/src/pages/Auth/Auth.css
+++ b/client/src/pages/Auth/Auth.css
@@ -1,10 +1,11 @@
 .auth-section{
     min-height: 100vh;
-    margin: 0% auto;
+    margin: 0 auto;
     background-color: #f1f2f3;
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 .auth-container-1{
